syntax = "proto3";

package pb;
import "users.proto";
option go_package="github.com/0xOnah/bank/pb";

message CreateUserRequest{
    string username = 1;
    string full_name = 2;
    string password = 3;
    string email = 4;
}

message CreateUserResponse{
    User user = 1;
}